# dancemore_mediatools

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: build.yaml
docs/: WBS.md
docs/research/: kodi-rpc-formats.md
docs/specs/: 0001-web-verification.md  0002-roadmap.md  0003-fix-koditool-tests.md  0003-jukeingest-hardening.md  0004-tv-mode-ui-refresh.md  0004-tv-mode-web-hardening.md  0005-kodi-mock-harness.md  0006-state-persistence.md  0007-circuit-breaker.md  0008-metadata-extraction.md  0009-ingest-dryrun-diff.md  0010-music-library-rpc.md  0011-volume-control-rpc.md
dupehunter/: Cargo.toml
dupehunter/src/: lib.rs  main.rs
dupehunter/tests/: collision_logic.rs
jukeingest/: Cargo.toml  README.md
jukeingest/src/: main.rs
koditool/: Cargo.toml  config.yml
koditool/src/: kodi_helper.rs  random_ep.rs  tvmode.rs
koditool/tests/: kodi_helper_test.rs
tv_mode_web/: Cargo.toml  jukectl_channels.yml
tv_mode_web/src/: app_state.rs  lib.rs  main.rs
tv_mode_web/src/routes/: api.rs  index.rs  jukectl.rs  mod.rs
tv_mode_web/src/scheduler/: mod.rs
tv_mode_web/static/: index.html
tv_mode_web/templates/: index.html.j2  jukectl.html.j2
tv_mode_web/tests/: state_persistence.rs  web_integrity.rs
tv_mode_web/tests/harness/: mod.rs
