[package]
name = "dupehunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "dupehunter"
path = "src/lib.rs"

[[bin]]
name = "dupehunter"
path = "src/main.rs"
