[package]
name = "tv_mode_web"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
rand = "0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket = { version = "0.5.1", features = ["json"] }

koditool = { path = "../koditool" }
serde_yaml = "0.9.34"
rocket_dyn_templates = { version = "0.2.0", features = ["minijinja"] }
